Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
13.0.1
-
Not for Release Notes
-
Q2/2026 Server Development
Description
During the development of MDEV-14992, the test backup.backup_innodb failed on Microsoft Windows due to ERROR_ACCESS_DENIED. It appears that the write permission on a log file is being revoked while the server is starting up. A premature mariadbd process startup is probably an issue with the regression test driver itself (see MDEV-28976).
In any case, there is no reason to open the log files in read/write mode when innodb_log_recovery_target is set. In this mode, we are only supposed to recover the data files based on the log file contents, and not allow any writes from applications or to the log.
Attachments
Issue Links
- blocks
-
MDEV-14992 BACKUP SERVER to mounted file system
-
- Stalled
-
- is caused by
-
MDEV-37949 Implement innodb_log_archive
-
- Closed
-