MDEV-39861 innodb_log_recovery_target wrongly opens log in read-write mode

log_t::archived_switch_recovery_prepare(): Observe recv_sys.rpo
similar to what recv_sys_t::find_checkpoint() does.